--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,14 @@
     <artifactId>excel2pdf</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+
     <dependencies>
+        <dependency>
+            <groupId>com.aspose</groupId>
+            <artifactId>aspose-words</artifactId>
+            <version>14.5.0</version>
+        </dependency>
+
         <dependency>
             <groupId>com.aspose</groupId>
             <artifactId>aspose-cells</artifactId>
@@ -20,8 +27,7 @@
         <repository>
             <id>AsposeJavaAPI</id>
             <name>Aspose Java API</name>
-            <url>http://maven.aspose.com/artifactory/simple/ext-releas..</url>
+            <url>http://maven.aspose.com/artifactory/simple/ext-release-local/</url>
         </repository>
     </repositories>
-
 </project>
